[package]
name = "numbas"
version = "0.1.0"
authors = ["Jesse Hoobergs <jesse@hoobergs.be>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.110", features=["derive"]}                                
serde_json = "1.0.53"
serde_with = "1.4.0"
serde_plain = "1.0.0"
comparable = { version = "0.5.2", features = ["derive"] }

pest = "2.1"
pest_derive = "2.1"

log = "0.4"
#schemars= "0.8.3"
schemars = { git = "https://github.com/jhoobergs/schemars.git", branch = "tagged-enums-as-if-else" }
structdoc = { git = "https://github.com/m8rex/structdoc.git"}

[dev-dependencies]
simple_logger = "2.1.0"
