[package]
name = "rumbas"
version = "0.6.2"
authors = ["Jesse Hoobergs <jesse@hoobergs.be>"]
description = "Make online exercises great again!"
edition = "2021"

[[bin]]
name = "rumbas"
path = "src/main.rs"

[lib]
name = "rumbas"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.110", features=["derive"]}                                
serde_json = "1.0.53"
serde_yaml = "0.8.13"
comparable = { version = "0.5.2", features = ["derive"] }

yaml-rust = { version = "0.5", package = "yaml-rust-davvid" }
numbas = {path="../numbas"}
regex = "1"
clap = {version = "3.0.5", features = ["derive", "cargo"]}
sanitize-filename = "0.3.0"

lazy_static = "1.4.0"

log = "0.4"
fern = { version = "0.6", features = ["colored"] }
chrono = { version ="0.4", features = ["clock", "std"]  }

enum-display-derive = "0.1.1"

#schemars= "0.8.3"
schemars = { git = "https://github.com/jhoobergs/schemars.git", branch = "tagged-enums-as-if-else" }

paste = "1.0"

rayon = "1.5.1"

rumbas_support = { path="../rumbas_support" }

notify = "4.0.17"

semver = { version = "1.0", features = ["serde"] }

git2 = "0.15.0"

[dev-dependencies]
insta = "1.8.0"
