[package]
name = "rumbas"
version = "0.8.0"
authors = ["Jesse Hoobergs <jhoobergs@gmail.com>"]
description = "Make online exercises great again!"
edition = "2021"
default-run = "rumbas"

[[bin]]
name = "rumbas"
path = "src/main.rs"

[lib]
name = "rumbas"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.110", features=["derive"]}                                
serde_json = "1.0.53"
serde_yaml = "0.8.13"
comparable = { version = "0.5.2", features = ["derive"] }

yaml-subset = { version = "0.1.12" }
numbas = {path="../numbas"}
regex = "1"
clap = {version = "4.0.32", features = ["derive", "cargo"]}
clap_complete = "4.0.7"
sanitize-filename = "0.3.0"

lazy_static = "1.4.0"

log = "0.4"
fern = { version = "0.6", features = ["colored"] }
chrono = { version ="0.4", features = ["clock", "std"]  }

enum-display-derive = "0.1.1"

#schemars= "0.8.3"
schemars = { git = "https://github.com/jhoobergs/schemars.git", branch = "tagged-enums-as-if-else" }
structdoc = { git = "https://github.com/m8rex/structdoc.git"}

paste = "1.0"

rayon = "1.5.1"

rumbas_support = { path="../rumbas_support" }

notify = "4.0.17"

semver = { version = "1.0", features = ["serde"] }

git2 = "0.15.0"

# Add openssl-sys as a direct dependency so it can be cross compiled to
# x86_64-unknown-linux-musl using the "vendored" feature below
openssl-sys = "*"

[dev-dependencies]
insta = { version ="1.21.0", features=["yaml"] }

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]
