[package]
name = "rumbas_support_derive"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
darling = "0.13.0"
proc-macro2 = "1.0.29"
quote = "1.0.9"
syn = "1.0.75"

[dev-dependencies]
rumbas_support = { path = "../rumbas_support" }
serde = { version="1.0.110", features=["derive"]}
serde_yaml = "0.8.13"
